<resources>
    <string name="app_name">Calculate_project</string>
    <string name="FirstNumber">첫 번째 숫자</string>
    <string name="SecondNumber">두 번째 숫자</string>
    <string name="Button0">0</string>
    <string name="Button1">1</string>
    <string name="Button2">2</string>
    <string name="Button3">3</string>
    <string name="Button4">4</string>
    <string name="Button5">5</string>
    <string name="Button6">6</string>
    <string name="Button7">7</string>
    <string name="Button8">8</string>
    <string name="Button9">9</string>
    <string name="ButtonAdd">더하기</string>
    <string name="ButtonSub">빼기</string>
    <string name="ButtonMul">곱하기</string>
    <string name="ButtonDiv">나누기</string>
    <string name="Result">계산결과: </string>
</resources>